# TwoZeroFourEight

./: Cargo.toml  build.sh  index.html
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-05-20-plugin-architecture.md  2026-05-23-touch-swipe.md
docs/superpowers/specs/: 2026-05-20-plugin-architecture-design.md  2026-05-23-touch-swipe-design.md
src/: main.rs  states.rs
src/board/: mod.rs  resources.rs  systems.rs
src/camera/: mod.rs
src/components/: mod.rs  position.rs  tile.rs
src/input/: mod.rs  resources.rs  systems.rs
src/render/: mod.rs  systems.rs
src/resources/: board.rs  game_state.rs  mod.rs  score.rs
src/systems/: camera.rs  game_logic.rs  input.rs  merge.rs  mod.rs  movement.rs  rendering.rs  spawn.rs  ui.rs
src/ui/: components.rs  mod.rs  systems.rs
src/utils/: directions.rs  mod.rs
