[package]
name = "TwoZeroFourEight"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18.1", features = [] }
rand = "0.8"

# WASM support
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
